fixed css question bubble class styling issue of being behinde other text elements

--- a/style.css
+++ b/style.css
@@ -163,13 +163,13 @@ body {
 }
 
 .copy-left {
-    display: inline-block;
-    text-align: center;
-    -moz-transform: scaleX(-1);
-    -o-transform: scaleX(-1);
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
-    filter: FlipH;
+    display: inline-block; 
+    text-align: center; 
+    -moz-transform: scaleX(-1); 
+    -o-transform: scaleX(-1); 
+    -webkit-transform: scaleX(-1); 
+    transform: scaleX(-1); 
+    filter: FlipH; 
     -ms-filter: “FlipH”;
     font-size: 1em;
 }
@@ -460,18 +460,17 @@ body {
   color: white;
   border-radius: 1em;
   padding: 1em 1em;
-  margin-left: auto; /* Change margin-left to auto */
+  margin-left: 60%;
   max-width: 90%;
   position: relative;
   font-family: "Rubik", "Arial", "sans-serif";
   text-align: right;
-  box-shadow: 0px 4px 16px rgba(70, 228, 54, 0.1), 0px 8px 24px rgba(70, 228, 54, 0.1), 0px 16px 56px rgba(70, 228, 54, 0.1);
-  animation: scale-in-tr 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  box-shadow: 0px 4px 16px rgba(70,228,54,0.1), 0px 8px 24px rgba(70,228,54,0.1), 0px 16px 56px rgba(70,228,54,0.1);
 }
 
 .usr-question-bubble:before {
   content: '';
-  position: relative;
+  position: absolute;
   width: 0;
   max-width: fit-content;
   height: 0;
@@ -481,20 +480,7 @@ body {
   top: 50%;
   right: -15px;
   transform: rotate(-180deg) translateY(50%);
-  box-shadow: 0px 4px 16px rgba(70, 228, 54, 0.1), 0px 8px 24px rgba(70, 228, 54, 0.1), 0px 16px 56px rgba(70, 228, 54, 0.1);
-}
-
-@keyframes scale-in-tr {
-  0% {
-    transform: scale(0);
-    transform-origin: 100% 0%;
-    opacity: 1;
-  }
-  100% {
-    transform: scale(1);
-    transform-origin: 100% 0%;
-    opacity: 1;
-  }
+  box-shadow: 0px 4px 16px rgba(70,228,54,0.1), 0px 8px 24px rgba(70,228,54,0.1), 0px 16px 56px rgba(70,228,54,0.1);
 }
 
 .goodbye-bubble {
@@ -521,10 +507,4 @@ body {
   left: -15px;
   transform: translateY(-50%);
   box-shadow: 0px 4px 16px rgba(255,105,105,0.1), 0px 8px 24px rgba(255,105,105,0.1), 0px 16px 56px rgba(255,105,105,0.1);
-}
-
-.usr-question-div {
-    max-width: fit-content;
-    position: absolute;
-
 }
